--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Simple Calculator Using Tailwind CSS</title>
     <!-- tailwind css  -->
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <!-- conecting javascript  -->
+    <script src="./assets/script/app.js"></script>
 </head>
 
 <body>
