--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator Using Tailwind CSS</title>
     <!-- tailwind css  -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <!-- conecting javascript  -->
     <script src="./assets/script/app.js"></script>
 </head>
@@ -16,11 +16,30 @@
     <header>
 
     </header>
-    <main>
-        <div class="min-h-screen bg-green-200 flex items-center justify-center">
-            <div>
+    <main class="min-h-screen bg-gray-700">
+        <h2 class="text-xl text-center font-bold">Simple Calculator</h2>
+        <div class="flex items-center justify-center">
+            <input type="text" name="" id="" placeholder="0">
+            <button class="rounded border-solid border-gray-500 bg-red-200 px-2" onclick="clear()">C</button>
+            <button class="rounded border-solid border-gray-500 bg-red-200 px-2" onclick="del()">Del</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('%')">%</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('/')">/</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('7')">7</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('8')">8</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('9')">9</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('*')">*</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('4')">4</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('5')">5</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('6')">6</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('-')">-</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('1')">1</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('2')">2</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('3')">3</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('+')">+</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('.')">.</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="display('0')">0</button>
+            <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="calc()">=</button>
 
-            </div>
         </div>
     </main>
     <footer>
