--- a/index.html
+++ b/index.html
@@ -18,44 +18,48 @@
     </header>
     <main class="bg-slate-100">
         <div class="flex justify-center items-center min-h-screen">
-            <div class="p-4 border border-solid shadow-white border-white-400 bg-slate-300">
-                <input type="text" name="" id="" placeholder="0" class="mb-5 p-5 font-extrabold rounded-xl">
+            <div class="p-4 border border-solid shadow-white border-white-400 bg-black rounded-xl">
+                <input type="text" name="" id="" placeholder="0"
+                    class="mb-5 p-5 font-extrabold rounded-xl text-white bg-black">
                 <div class="grid grid-cols-4 gap-4">
-                    <button class="rounded border-solid border-gray-500 bg-red-200 px-2" onclick="clear()">C</button>
-                    <button class="rounded border-solid border-gray-500 bg-red-200 px-2" onclick="del()">Del</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full border-solid border-gray-500 bg-slate-300 p-4"
+                        onclick="clear()">C</button>
+                    <button class="rounded-full border-solid border-gray-500 bg-slate-300 p-4"
+                        onclick="del()">Del</button>
+                    <button class="rounded-full border-solid border-gray-500 bg-slate-300 p-4"
                         onclick="display('%')">%</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full text-white border-solid border-gray-500 bg-amber-500 p-4"
                         onclick="display('/')">/</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full border-solid border-gray-500 bg-gray-500 text-white px-2"
                         onclick="display('7')">7</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full border-solid border-gray-500 bg-gray-500 text-white px-2"
                         onclick="display('8')">8</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full border-solid border-gray-500 bg-gray-500 text-white px-2"
                         onclick="display('9')">9</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full text-white border-solid border-gray-500 bg-amber-500 p-4"
                         onclick="display('*')">*</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full border-solid border-gray-500 bg-gray-500 text-white px-2"
                         onclick="display('4')">4</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full border-solid border-gray-500 bg-gray-500 text-white px-2"
                         onclick="display('5')">5</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full border-solid border-gray-500 bg-gray-500 text-white px-2"
                         onclick="display('6')">6</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full text-white border-solid border-gray-500 bg-amber-500 p-4"
                         onclick="display('-')">-</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full border-solid border-gray-500 bg-gray-500 text-white px-2"
                         onclick="display('1')">1</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full border-solid border-gray-500 bg-gray-500 text-white px-2"
                         onclick="display('2')">2</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full border-solid border-gray-500 bg-gray-500 text-white px-2"
                         onclick="display('3')">3</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full text-white border-solid border-gray-500 bg-amber-500 p-4"
                         onclick="display('+')">+</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
-                        onclick="display('.')">.</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2"
+                    <button class="rounded-full border-solid border-gray-500 bg-gray-500 text-white p-4 col-span-2"
                         onclick="display('0')">0</button>
-                    <button class="rounded border-solid border-gray-500 bg-green-200 px-2" onclick="calc()">=</button>
+                    <button class="rounded-full border-solid border-gray-500 bg-gray-500 text-white p-4"
+                        onclick="display('.')">.</button>
+                    <button class="rounded-full border-solid border-gray-500 bg-amber-500 text-white p-4"
+                        onclick="calc()">=</button>
                 </div>
             </div>
         </div>
