--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="flex justify-center items-center min-h-screen">
             <div class="p-4 border border-solid shadow-white border-white-400 bg-black rounded-xl">
                 <input type="text" name="" id="" placeholder="0"
-                    class="mb-5 p-5 font-extrabold rounded-xl text-white bg-black">
+                    class="mb-5 p-5 font-extrabold rounded-xl text-white bg-black text-right">
                 <div class="grid grid-cols-4 gap-4">
                     <button class="rounded-full border-solid border-gray-500 bg-slate-300 p-4"
                         onclick="clear()">C</button>
