--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     class="mb-5 p-5 font-extrabold rounded-xl text-white bg-black text-right">
                 <div class="grid grid-cols-4 gap-4">
                     <button class="rounded-full border-solid border-gray-500 bg-slate-300 p-4"
-                        onclick="clear()">C</button>
+                        onclick="clr()">C</button>
                     <button class="rounded-full border-solid border-gray-500 bg-slate-300 p-4"
                         onclick="del()">Del</button>
                     <button class="rounded-full border-solid border-gray-500 bg-slate-300 p-4"
